--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "^4.21.2",
-    "redis": "^4.7.0"
-
+    "pg": "^8.16.0",
+    "redis": "^4.7.0",
+    "sequelize": "^6.37.7"
   }
 }
